--- a/templetes/index.html
+++ b/templetes/index.html
@@ -240,7 +240,7 @@
           <!-- Creating a search bar for search a video from youtube video or with video-Id  -->
           <div class="row m-1">
             <div class="row m-0 p-0 d-flex justify-content-center align-items-center">
-              <div class="col-auto me-auto"><a href="/" class="bg-white" style="width: 10px!important;"><img src="{% static 'files/icon1.png'%}"style="transform:scale(1.5)" width="30px" height="30px" alt=""></a></div>
+              <div class="col-auto me-auto"><a href="/" style="width: 10px!important;"><img src="{% static 'files/icon1.png'%}"style="transform:scale(1.5)" width="30px" height="30px" alt=""></a></div>
               <div class="col p-0 d-flex">
                 <input id="searchUrlsource" type="search" name="watch" class="form-control" style="background: #ffffff3d !important;
                   color:var(--text-color) !IMPORTANT;" id="watch" placeholder="www.youtube.com ">
