adding repid api to extracting playlist urls

--- a/templetes/index.html
+++ b/templetes/index.html
@@ -370,7 +370,7 @@
   </div>
 
 
-  <!-- Modal for list video for quick play -->
+  <!-- Modal for list video insert Playing Playlist Videos -->
   <div class="modal fade backCardImage" id="exampleModalToggle" aria-hidden="true"
     aria-labelledby="exampleModalToggleLabel" tabindex="-1">
     <div class="modal-dialog modal-xl">
@@ -385,6 +385,7 @@
                     consecteturadipisicing elit.</h1>
                   <p class="card-text text-white" id="playlisLenght"></p>
                   <p class="card-text text-white" id="playlisView"></p>
+                  <p class="card-text text-white" id="PlaylistlastUpdated"></p>
 
                 </div>
                 <div class="col">
@@ -430,8 +431,6 @@
               <p class="card-text text-white" id="playlisViewsavedvideo"></p>
             </div>
             <div class="col text-end">
-              <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-
               <img id="playlistThumbnailsavedvideo" src="{% static 'files/back.jpg'%}" style="width: 70%;"
                 alt="">
 
@@ -465,8 +464,6 @@
               <p class="card-text text-white" id="playlisViewsaved"></p>
             </div>
             <div class="col text-end">
-              <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close">x</button>
-
               <img id="playlistThumbnailsaved" src="{% static 'files/back.jpg'%}" style="width: 70%;"
                 alt="">
 
