--- a/templetes/index.html
+++ b/templetes/index.html
@@ -5,12 +5,17 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="decription"  content="">
-  <meta property="og.title" id="shareTitle" content="{{playingAudio.title}}">
-  <meta property="og.image" id="ShareImage" content="https://img.youtube.com/vi/{{VideoId}}/maxresdefault.jpg">
+  <meta property="og:title" id="shareTitle" content="{{playingAudio.title}}">
+  <meta property="og:image" id="ShareImage" content="https://img.youtube.com/vi/{{VideoId}}/maxresdefault.jpg">
+  <meta property="og:description" content="Play YouTube videos in to mp3 format with hight quality audio and this is free for you">
+  <meta property="og:type" content="article">
+  <meta property="og:url" id="shareUrl" content="https://flaviocopes.com/setup-github-credentials-macos/">
+  
+
   <title>YouTube Mp3</title>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
+
   {% load static %}
   <link rel="stylesheet" href="{% static 'css/style.css'%}">
   <link rel="icon" type="image/x-icon" href="{% static 'files/icon1.png'%}">
