--- a/templetes/index.html
+++ b/templetes/index.html
@@ -249,7 +249,6 @@
               <div class="col p-0 d-flex">
                 <input id="searchUrlsource" type="search" name="watch" class="form-control" style="background: #ffffff3d !important;
                   color:var(--text-color) !IMPORTANT;" id="watch" placeholder="www.youtube.com ">
-                  <label for="watch" class="link-text" id="searchError"></label>
               </div>
               <div class="col-auto px-2 d-flex justify-content-center align-items-center" style="height:fit-content !important;">
                 <!-- <input id="SearchForurl" class="btn btn-primary" type="button" value="Play Mp3"> -->
@@ -267,6 +266,8 @@
 
               </div>
             </div>
+            <label for="watch" class="link-text text-center" id="searchError"></label>
+
           </div>
 
          
