add some update like make it more responsive for all devices and new features like delete one or all playlist, search new videos with going on youtube

--- a/templetes/signup.html
+++ b/templetes/signup.html
@@ -11,20 +11,11 @@
   </head>
   <body>
 
-<html>
-<body>
-<h1>My Google OAuth Project </h1>
-{% if user.is_authenticated %}
-  <p>Welcome, You are logged in as {{ user.username }}</p>
-{% else %}
-  <a href="#">Login With Google</a>
-{% endif %}
-</body>
-</html>
 
     <section class="vh-100" style="background-color: #9A616D;">
-        <div class="container py-5 h-100">
-          <div class="row d-flex justify-content-center align-items-center h-100">
+      <div class="container py-5 h-100">
+        <div class="row d-flex justify-content-center align-items-center h-100">
+            <h1 class="text-center text-white w-100">Sign Up</h1>
             <div class="col col-xl-10">
               <div class="card" style="border-radius: 1rem;">
                 <div class="row g-0">
