--- a/templetes/login.html
+++ b/templetes/login.html
@@ -16,6 +16,7 @@
     <section class="vh-100" style="background-color: #9A616D;">
         <div class="container py-5 h-100">
           <div class="row d-flex justify-content-center align-items-center h-100">
+            <h1 class="text-center text-white w-100">Log In</h1>
             <div class="col col-xl-10">
               <div class="card" style="border-radius: 1rem;">
                 <div class="row g-0">
