added new search feature in playing playlist for search for a songs

--- a/templetes/index2.html
+++ b/templetes/index2.html
@@ -300,7 +300,16 @@
                 <p class="card-text text-white py-0 m-0" id="playlisLenght"></p>
                 <p class="card-text text-white py-0 m-0" id="playlisView"></p>
                 <p class="card-text text-white py-0 m-0" id="PlaylistlastUpdated"></p>
+                <div class="row align-items-center">
+                  <div class="col p-0 px-1">
+                  <input type="search" name="searchinplaylist" id="searchinplaylist" class="form-control mt-2 text-white" style="height:30px;background-color:#ffffff3d !important">
 
+                  </div>
+                  <div class="col-auto p-0 m-0">
+                    <span class="text-warning" id="searchvideoresults"></span>
+                  </div>
+
+                </div>
               </div>
               <div class="col-md text-end ">
                   <img id="playlistThumbnail" src="..." class="rounded shodow-lg" style="width:60%;" alt="">
