delete some files

--- a/templetes/index2.html
+++ b/templetes/index2.html
@@ -576,13 +576,12 @@
             <p class="w-100 text-center text-white fs-4 p-0">Scan QR Code</p>
             <div style="width: 100px;height:100px;"
               class="w-50 h-50 d-flex justify-content-center align-items-center bg-transparent">
-              <img id="shareWithQR" alt="" title="Scan QR Code" width="200px"  />
-              <!-- <div id="qrcode"></div> -->
+              
+                <img id="shareWithQR"  style="width: 200px;height:200px;border:4px solid cyan;border-radius:4px;padding:1px 2px;" alt="" title="Scan QR Code"   />
 
 
             </div>
-            <input type="url" name="copyurl" id="copyurl" class="w-100 my-1 border-0"
-              style="background-color: #140929;color:gray;">
+            <input type="url" name="copyurl" id="copyurl" class="w-100 my-1 border-0" style="background-color: #140929b0;color:gray;border-radius:8px;">
             <div class="row text-center shadow-lg border rounded mx-auto m-2">
               <div class="col"><button class="btn border-0" title="copy site link"
                   onclick="CopyShareUrl(this,'link')"><i class="fs-4 text-white media-icons6 bi bi-copy"></i></button>
